Fix navbar 0 opacity above collapse width

--- a/unidfood_project/static/css/base.css
+++ b/unidfood_project/static/css/base.css
@@ -35,7 +35,7 @@ footer {
     padding-top: 20px;
     padding-bottom: 20px;
     margin-top: 30px; 
-    background-color: #f1f1f1; 
+    background-color: #f8f9fa; 
     text-align: center;
     position: relative;
     width: 100%;
@@ -48,20 +48,20 @@ footer {
     flex: 1;  
 }
 
-/* Ensuring footer stays at the bottom if there is not enough content */
-footer {
-    margin-top: auto; 
-    background-color: #f8f9fa;
-    text-align: center;
-    color: #212529; 
+/* Adds spacing and fade effect for the dropdown */
+@media (max-width: 991.98px) {
+    .navbar-collapse {
+        margin-top: 10px; 
+        transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+        opacity: 0;
+        transform: translateY(-10px);
+    }
 }
 
-/* Adds spacing and fade effect for the dropdown */
-.navbar-collapse {
-    margin-top: 10px; 
-    transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
-    opacity: 0;
-    transform: translateY(-10px);
+@media (min-width: 992px) {
+    .navbar-collapse {
+        opacity: 1;
+    }
 }
 
 .navbar-collapse.show {
